@@ -1,5 +1,12 @@
 2005-05-19  Vincent Noel  <vnoel@cox.net>
 
+	* calendar.c: (init_calendar_data), (calendar_month_changed),
+	(calendar_day_selected):
+	* logview.c: (loglist_selection_changed): Make the calendar
+	behave when no log is selected.
+
+2005-05-19  Vincent Noel  <vnoel@cox.net>
+
 	* Makefile.am:
 	* log_repaint.c: (handle_row_activation_cb), (log_repaint):
 	* logview.c: (logview_create_window), (CloseLogMenu),
